--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "OPS Online Support",
+  "name": "Ops Online Support",
   "short_name": "OPS",
   "start_url": "index.html",
   "display": "standalone",
