--- a/manifest.json
+++ b/manifest.json
@@ -4,18 +4,5 @@
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#00c4ff",
-  "icons": [
-    {
-      "src": "images/icons/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "images/icons/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ]
+  "theme_color": "#00c4ff"
 }
-
